chore(tsconfig.json): fixes files array in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
         "preserveConstEnums": true
     },
     "files": [
-        "node/node.d.ts",
-        "tape/tape.d.ts",
-        "express/express.d.ts",
-        "mime/mime.d.ts",
-        "serve-static/serve-static.d.ts",
-        "superagent/superagent.d.ts",
-        "supertest/supertest.d.ts",
+        "typings/node/node.d.ts",
+        "typings/tape/tape.d.ts",
+        "typings/express/express.d.ts",
+        "typings/mime/mime.d.ts",
+        "typings/serve-static/serve-static.d.ts",
+        "typings/superagent/superagent.d.ts",
+        "typings/supertest/supertest.d.ts",
         "src/greeter.ts",
         "src/index.ts",
         "spec/greeter-spec.ts",
