--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "npm run build && node src/index.js",
     "test": "npm run build && tape spec/**/*.js | tap-spec",
     "test:watch": "onchange 'src/**/*.ts' 'spec/**/*.ts' -- npm test",
-    "test:coverage": "npm run build && istanbul cover tape 'spec/**/*.js' > test.tap && istanbul report clover",
+    "test:coverage": "npm run build && istanbul cover -x 'spec/**/*.js' tape 'spec/**/*.js' > test.tap && istanbul report clover",
     "e2e": "npm run build && tape e2e/**/*.js | tap-spec",
     "e2e:watch": "onchange 'src/**/*.ts' 'e2e/**/*.ts' -- npm run e2e"
   },
